# mATRIC-master

./: .env  .env.example  .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  Makefile  README.md  USING_API.md  copier.yml  deployment.md  development.md  docker-compose.cloudflare.yml  docker-compose.nomadic.yml  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  example.env
.github/: pull_request_template.md
.github/workflows/: deploy-production.yml  deploy-staging.yml  release-package.yml  test.yml
backend/: Dockerfile  README.md  alembic.ini  prestart.sh  pyproject.toml  requirements.txt
backend/app/: config.py  database_session.py  main.py  models.py
backend/app_old/: main.py  websocket_client.py
docs/: conf.py  frontend.rst  index.rst  requirements.txt
frontend/: .env  .gitignore  Dockerfile  README.md  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/__tests__/: MapMain.test.tsx  RadioCard.test.tsx  SliderInput.test.tsx
frontend/src/: routeTree.gen.ts  theme.tsx
infra/: Makefile  README.md  ansible.cfg  requirements.yml
infra/inventory/: hosts
infra/playbooks/: debug.yml  runner.yml
mo_agent_dev/: .env  pyproject.toml  requirements.txt
mo_agent_dev/agent/: base_agent.py
mo_agent_dev/app/: auth.bak.py  auth.py  config.py  database.py  dependencies.py  main.py  models.py
mo_agent_dev/app/routes/: agent.py
mo_agent_dev/app/utils/: influxdb_writer.py
mo_agent_dev/app/wiremq/: mapp_publisher.py
mo_backend_and_test/: pyproject.toml
mo_backend_and_test/agent/: test_base_agent.py
mo_backend_and_test/app/: config.py  main.py  models.py
mo_backend_and_test/tests/: test_agent.py  test_database.py  test_main.py  test_users.py
mo_full_code/: .env  requirements.txt
mo_full_code/app/: auth.py  database.py  main.py  models.py
mo_full_code/tests/: test_auth.py  test_database_operation.bak.py  test_database_session.py  test_token.py
mo_mATRIC_RabbitMQ/: alembic.ini
mo_mATRIC_RabbitMQ/_tests/: test_agent.py  test_auth.py  test_dependencies.py  test_models.py  test_third_party_apps.py  test_token.py  test_users.py
mo_mATRIC_RabbitMQ/app/: auth.py  config.py  main.py
mo_mATRIC_RabbitMQ/tests/: test_auth.py  test_database.py  test_database_operation.bak.py  test_dependencies.py  test_main.py  test_third_party_apps.py  test_token.py
old/: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  release-notes.md
old/backend/: .gitignore  pyproject.toml  requirements.txt
old/docs/: backend.rst  frontend.rst
old/frontend/: package-lock.json  package.json  tsconfig.json
old/infra/: Makefile
ops/mongo-init/: init.js
services/api/: Dockerfile  README.md  gunicorn.conf.py  pyproject.toml  run.py
services/api/app/: __init__.py  auth.py  config.py  influx.py  match.py  models.py  rabbit.py
services/api/matching_service_api/: __init__.py  auth.py  config.py  influx.py  match.py  models.py  openapi.yml  rabbit.py  utils.py
services/api/matching_service_api/routes/: admin.py  auth.py  emulators.py  match.py  metrics.py  publishers.py  rabbit.py  subscribers.py  subscriptions.py  topics.py  users.py
services/client/: README.md  pyproject.toml
services/client/examples/: basic.py  multi.py  sub.py
services/client/examples/from_ui/: pub.py  sub.py  sub2.py
services/client/matching_service_client/: __init__.py  exceptions.py  matching_service_client.py  models.py
services/emulator/: Dockerfile  README.md  pyproject.toml  run.py
services/emulator/matching_service_emulator/: config.py  main.py
services/frontend/: Dockerfile  README.md  docker-entrypoint.sh  middleware.ts  package.json  (+3 more)
services/matcher/: Dockerfile  README.md  pyproject.toml  run.py
services/matcher/matcher/: config.py  main.py
traefik/: dynamic.yml  traefik.yml
(+231 files in other folders)
