[project]
name = "telecom-api"
version = "0.1.0"
description = "Flask API for telecom matching platform"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-jwt-extended>=4.6",
    "pymongo>=4.6",
    "pydantic>=2.7",
    "gunicorn>=21.2",
    "influxdb-client[ciso]>=1.43",
    "pika>=1.3",
    "werkzeug>=3.0",
    "pyyaml>=6.0",
]


[project.optional-dependencies]
dev = ["ipython", "black", "ruff"]


[tool.ruff]
line-length = 100