[project]
name = "matching_service_api"
version = "0.1.0"
description = "Flask API for mATRIC matching service"
requires-python = ">=3.11,<4"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "flask-jwt-extended>=4.7.1",
    "pymongo>=4.6",
    "pydantic[email] (>=2.11.7,<3.0.0)",
    "gunicorn>=21.2",
    "influxdb-client[ciso]>=1.43",
    "pika>=1.3",
    "werkzeug>=3.0",
    "pyyaml>=6.0",
    "flask-pymongo (>=3.0.1,<4.0.0)",
]


[project.optional-dependencies]
dev = ["ipython", "black", "ruff"]


[tool.ruff]
line-length = 100