[tool.poetry]
name = "matching_service_emulator"
version = "0.1.0"
description = "Publisher emulator for Matching Service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "matching_service_emulator" }]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.28.1,<0.29.0"
pydantic = "^2.6.0"
pymongo = "^4.6.0"
loguru = "^0.7.2"
# local dependency on the sibling client library
matching_service_client = { path = "../client", develop = true }
faker = "^37.6.0"
quart = "^0.20.0"
uvicorn = "^0.35.0"
quart-jwt-extended = "^0.1.0"
jsonschema = "^4.25.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
