[tool.poetry]
name = "matching-service"
version = "0.1.0"
description = "Standalone Matcher Service for mATRIC platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "matcher" }]

[tool.poetry.dependencies]
python = "^3.12"
fnmatch2 = "^0.0.8"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
aio-pika = "^9.5.7"
pymongo = "^4.14.1"

[tool.poetry.scripts]
matcher = "matcher.main:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
